overflow fix + optimized bg img

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,8 +5,11 @@
 
 html {
   --line-color: #e5e7eb;
-  overflow-x: hidden
 }
+
+html, body {
+  overflow-x:hidden 
+} 
 
 html.dark {
   --line-color: rgba(255, 255, 255, 0.2)
